--- a/uncoder/index.html
+++ b/uncoder/index.html
@@ -1,119 +1,141 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CC GEN</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <style>
-      body {
-        background-color: #f8f9fa; /* Light background color */
-        font-family: "Roboto", sans-serif; /* Modern font */
-      }
-
-      .container {
-        margin-top: 50px;
-        max-width: 600px; /* Adjusted max-width for better responsiveness */
-      }
-
-      .card {
-        border: none; /* Remove default card border */
-        border-radius: 15px; /* Rounded corners */
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Subtle drop shadow */
-      }
-
-      .card-header {
-        background-color: #007bff; /* Primary color header */
-        color: #fff;
-        border-radius: 15px 15px 0 0; /* Rounded top corners */
-      }
-
-      .card-body {
-        padding: 30px;
-      }
-
-      .form-label {
-        font-weight: 500; /* Slightly bolder labels */
-      }
-
-      .form-control {
-        border-radius: 8px; /* Rounded input fields */
-        border: 1px solid #ced4da; /* Light border color */
-      }
-
-      .form-control:focus {
-        border-color: #80bdff; /* Focus state border color */
-        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); /* Focus state box shadow */
-      }
-
-      .form-check-input:checked {
-        background-color: #007bff; /* Primary color for checked checkboxes */
-        border-color: #007bff;
-      }
-
-      .btn-generate {
-        background-color: #28a745; /* Success color for generate button */
-        border-color: #28a745;
-        border-radius: 8px; /* Rounded button */
-        transition: all 0.2s ease-in-out; /* Smooth transition on hover */
-      }
-
-      .btn-generate:hover {
-        background-color: #218838; /* Darker green on hover */
-        border-color: #1e7e34;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Hover effect: Larger drop shadow */
-      }
-
-      .output {
-        margin-top: 20px;
-      }
-
-      .textarea {
-        height: 200px;
-        resize: vertical;
-        font-family: "Courier New", Courier, monospace; /* Monospace font for output */
-      }
-
-      /* Responsive Styles */
-      @media (max-width: 576px) {
-        .container {
-          margin-top: 30px;
-          max-width: 95%; /* Full width on smaller screens */
-        }
-      }
-    </style>
-  </head>
-  <body>
     <div class="container">
       <div class="card">
         <div class="card-header text-center">
           <h3 class="mb-0">CC GEN</h3>
         </div>
         <div class="card-body">
-          <form name="console" id="console" class="needs-validation" novalidate>
-            <div class="mb-3">
-              <label for="binInput" class="form-label"><i class="fas fa-credit-card"></i> BIN:</label>
-              <input type="text" class="form-control" id="binInput" name="bin" placeholder="e.g., 523465xxxxxxxxxx" required />
-              <div class="invalid-feedback">
-                Please enter a valid BIN pattern.
-              </div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CC GEN - Credit Card Generator</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <style>
+        body {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .container {
+            max-width: 800px;
+            width: 100%;
+            padding: 30px;
+        }
+
+        .card {
+            border: none;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+        }
+
+        .card-header {
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4);
+            color: white;
+            border-bottom: none;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: 700;
+        }
+
+        .card-body {
+            padding: 40px;
+        }
+
+        .form-label {
+            font-weight: 600;
+            color: #555;
+        }
+
+        .form-control, .form-select {
+            border-radius: 10px;
+            border: 2px solid #e0e0e0;
+            padding: 12px;
+            transition: all 0.3s ease;
+        }
+
+        .form-control:focus, .form-select:focus {
+            border-color: #4ECDC4;
+            box-shadow: 0 0 0 0.2rem rgba(78, 205, 196, 0.25);
+        }
+
+        .btn-generate {
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4);
+            border: none;
+            border-radius: 50px;
+            padding: 12px 30px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+        }
+
+        .btn-generate:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+        }
+
+        .output {
+            margin-top: 30px;
+        }
+
+        .textarea {
+            height: 200px;
+            border-radius: 15px;
+            padding: 15px;
+            font-family: 'Roboto Mono', monospace;
+            font-size: 14px;
+            background-color: #f8f9fa;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+            .card-body {
+                padding: 20px;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <i class="fas fa-credit-card me-2"></i> CC GEN - Credit Card Generator
             </div>
-            <div class="mb-3">
-              <label for="cardCount" class="form-label"><i class="fas fa-hashtag"></i> Number of Cards:</label>
-              <input type="number" class="form-control" id="cardCount" name="count" value="10" min="1" max="50" required />
-              <div class="invalid-feedback">
-                Please enter a number between 1 and 50.
-              </div>
-            </div>
-            <div class="mb-3">
-              <label for="cvvInput" class="form-label"><i class="fas fa-lock"></i> Custom CVV (Optional):</label>
-              <input type="text" class="form-control" id="cvvInput" name="cvv" placeholder="Leave blank for random" maxlength="3" />
-            </div>
-            <div class="mb-3">
-              <label for="expiryMonth" class="form-label"><i class="fas fa-calendar-alt"></i> Expiry Month (Optional):</label>
-              <select class="form-select" id="expiryMonth">
+            <div class="card-body">
+                <form name="console" id="console" class="needs-validation" novalidate>
+                    <div class="row mb-4">
+                        <div class="col-md-6 mb-3">
+                            <label for="binInput" class="form-label"><i class="fas fa-hashtag me-2"></i>BIN:</label>
+                            <input type="text" class="form-control" id="binInput" name="bin" placeholder="e.g., 523465xxxxxxxxxx" required />
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="cardCount" class="form-label"><i class="fas fa-layer-group me-2"></i>Number of Cards:</label>
+                            <input type="number" class="form-control" id="cardCount" name="count" value="10" min="1" max="50" required />
+                        </div>
+                    </div>
+                    <div class="row mb-4">
+                        <div class="col-md-4 mb-3">
+                            <label for="cvvInput" class="form-label"><i class="fas fa-lock me-2"></i>Custom CVV:</label>
+                            <input type="text" class="form-control" id="cvvInput" name="cvv" placeholder="Optional" maxlength="3" />
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="expiryMonth" class="form-label"><i class="fas fa-calendar-alt me-2"></i>Expiry Month:</label>
+                            <select class="form-select" id="expiryMonth">
                 <option value="">Random</option>
                 <option value="01">01</option>
                 <option value="02">02</option>
@@ -128,10 +150,10 @@
                 <option value="11">11</option>
                 <option value="12">12</option>
               </select>
-            </div>
-            <div class="mb-3">
-              <label for="expiryYear" class="form-label"><i class="fas fa-calendar-alt"></i> Expiry Year (Optional):</label>
-              <select class="form-select" id="expiryYear">
+                        </div>
+                        <div class="col-md-4 mb-3">
+                            <label for="expiryYear" class="form-label"><i class="fas fa-calendar-check me-2"></i>Expiry Year:</label>
+                            <select class="form-select" id="expiryYear">
                 <option value="">Random</option>
                 <option value="2024">2024</option>
                 <option value="2025">2025</option>
@@ -141,18 +163,20 @@
                 <option value="2029">2029</option>
                 <option value="2030">2030</option>
               </select>
+                        </div>
+                    </div>
+                    <div class="text-center mb-4">
+                        <button type="button" class="btn btn-generate btn-lg px-5" onclick="generateCards()">
+                            <i class="fas fa-cog fa-spin me-2"></i> Generate Cards
+                        </button>
+                    </div>
+                    <div class="output">
+                        <textarea class="form-control textarea" name="output2" id="output2" rows="10" readonly placeholder="Generated cards will appear here..."></textarea>
+                    </div>
+                </form>
             </div>
-            <div class="text-center">
-              <button type="button" class="btn btn-generate btn-lg px-5" onclick="generateCards()"><i class="fas fa-cog fa-spin me-2"></i> Generate Cards</button>
-            </div>
-            <div class="output mt-4">
-              <textarea class="form-control textarea" name="output2" id="output2" rows="10" readonly></textarea>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
     // Function to handle BIN input changes
