--- a/uncoder/index.html
+++ b/uncoder/index.html
@@ -1,188 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CC GEN - Credit Card Generator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <style>
-      body {
-        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        font-family: "Poppins", sans-serif;
-        color: #333;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+        body {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
 
-      .container {
-        max-width: 600px;
-        width: 100%;
-        padding: 30px;
-      }
-
-      .card {
-        border: none;
-        border-radius: 20px;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
-        overflow: hidden;
-        background: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-      }
-
-      .card-header {
-        background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-        color: white;
-        border-bottom: none;
-        padding: 20px;
-        text-align: center;
-        font-size: 24px;
-        font-weight: 700;
-      }
-
-      .card-body {
-        padding: 30px;
-      }
-
-      .form-label {
-        font-weight: 600;
-        color: #555;
-      }
-
-      .form-control,
-      .form-select {
-        border-radius: 10px;
-        border: 2px solid #e0e0e0;
-        padding: 10px;
-        transition: all 0.3s ease;
-      }
-
-      .form-control:focus,
-      .form-select:focus {
-        border-color: #4ecdc4;
-        box-shadow: 0 0 0 0.2rem rgba(78, 205, 196, 0.25);
-      }
-
-      .btn-generate {
-        background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-        border: none;
-        border-radius: 50px;
-        padding: 10px 25px;
-        font-weight: 600;
-        letter-spacing: 1px;
-        transition: all 0.3s ease;
-      }
-
-      .btn-generate:hover {
-        transform: translateY(-3px);
-        box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
-      }
-
-      .output {
-        margin-top: 20px;
-        position: relative;
-      }
-
-      .textarea {
-        height: 150px;
-        border-radius: 15px;
-        padding: 15px;
-        font-family: "Roboto Mono", monospace;
-        font-size: 14px;
-        background-color: #f8f9fa;
-      }
-
-      .copy-btn {
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        background-color: #4ecdc4;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        padding: 5px 10px;
-        font-size: 14px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      .copy-btn:hover {
-        background-color: #45b7a0;
-      }
-
-      @media (max-width: 768px) {
         .container {
-          padding: 15px;
+            width: 100%;
+            max-width: 1000px;
+            margin: auto;
         }
+
+        .card {
+            border: none;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+        }
+
+        .card-header {
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4);
+            color: white;
+            border-bottom: none;
+            padding: 20px;
+            text-align: center;
+            font-size: 24px;
+            font-weight: 700;
+        }
+
         .card-body {
-          padding: 20px;
+            padding: 30px;
         }
-      }
+
+        .form-label {
+            font-weight: 600;
+            color: #555;
+        }
+
+        .form-control, .form-select {
+            border-radius: 10px;
+            border: 2px solid #e0e0e0;
+            padding: 10px;
+            transition: all 0.3s ease;
+        }
+
+        .form-control:focus, .form-select:focus {
+            border-color: #4ECDC4;
+            box-shadow: 0 0 0 0.2rem rgba(78, 205, 196, 0.25);
+        }
+
+        .btn-generate {
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4);
+            border: none;
+            border-radius: 50px;
+            padding: 10px 25px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            transition: all 0.3s ease;
+        }
+
+        .btn-generate:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 7px 14px rgba(50, 50, 93, 0.1), 0 3px 6px rgba(0, 0, 0, 0.08);
+        }
+
+        .output {
+            margin-top: 20px;
+            position: relative;
+        }
+
+        .textarea {
+            height: 200px;
+            border-radius: 15px;
+            padding: 15px;
+            font-family: 'Roboto Mono', monospace;
+            font-size: 14px;
+            background-color: #f8f9fa;
+        }
+
+        .copy-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: #4ECDC4;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 5px 10px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .copy-btn:hover {
+            background-color: #45b7a0;
+        }
+
+        @media (min-width: 768px) {
+            .card-body {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+            }
+            .form-group {
+                width: 48%;
+            }
+            .output {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 767px) {
+            .container {
+                padding: 15px;
+            }
+            .card-body {
+                padding: 20px;
+            }
+        }
     </style>
-  </head>
-  <body>
+</head>
+<body>
     <div class="container">
-      <div class="card">
-        <div class="card-header"><i class="fas fa-credit-card me-2"></i> Credit Card Generator</div>
-        <div class="card-body">
-          <form name="console" id="console" class="needs-validation" novalidate>
-            <div class="mb-3">
-              <label for="binInput" class="form-label"><i class="fas fa-hashtag me-2"></i>BIN:</label>
-              <input type="text" class="form-control" id="binInput" name="bin" placeholder="e.g., 523465xxxxxxxxxx" required />
+        <div class="card">
+            <div class="card-header">
+                <i class="fas fa-credit-card me-2"></i> CC GEN - Credit Card Generator
             </div>
-            <div class="mb-3">
-              <label for="cardCount" class="form-label"><i class="fas fa-layer-group me-2"></i>Number of Cards:</label>
-              <input type="number" class="form-control" id="cardCount" name="count" value="10" min="1" max="50" required />
+            <div class="card-body">
+                <form name="console" id="console" class="needs-validation" novalidate>
+                    <div class="form-group mb-3">
+                        <label for="binInput" class="form-label"><i class="fas fa-hashtag me-2"></i>BIN:</label>
+                        <input type="text" class="form-control" id="binInput" name="bin" placeholder="e.g., 523465xxxxxxxxxx" required />
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="cardCount" class="form-label"><i class="fas fa-layer-group me-2"></i>Number of Cards:</label>
+                        <input type="number" class="form-control" id="cardCount" name="count" value="10" min="1" max="50" required />
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="cvvInput" class="form-label"><i class="fas fa-lock me-2"></i>Custom CVV:</label>
+                        <input type="text" class="form-control" id="cvvInput" name="cvv" placeholder="Optional" maxlength="3" />
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="expiryMonth" class="form-label"><i class="fas fa-calendar-alt me-2"></i>Expiry Month:</label>
+                        <select class="form-select" id="expiryMonth">
+                <option value="">Random</option>
+                <option value="01">01</option>
+                <option value="02">02</option>
+                <option value="03">03</option>
+                <option value="04">04</option>
+                <option value="05">05</option>
+                <option value="06">06</option>
+                <option value="07">07</option>
+                <option value="08">08</option>
+                <option value="09">09</option>
+                <option value="10">10</option>
+                <option value="11">11</option>
+                <option value="12">12</option>
+                        </select>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="expiryYear" class="form-label"><i class="fas fa-calendar-check me-2"></i>Expiry Year:</label>
+                        <select class="form-select" id="expiryYear">
+                <option value="">Random</option>
+                <option value="2024">2024</option>
+                <option value="2025">2025</option>
+                <option value="2026">2026</option>
+                <option value="2027">2027</option>
+                <option value="2028">2028</option>
+                <option value="2029">2029</option>
+                <option value="2030">2030</option>
+              </select>
+                    </div>
+                    <div class="form-group mb-3 w-100 text-center">
+                        <button type="button" class="btn btn-generate btn-lg px-5" onclick="generateCards()">
+                            <i class="fas fa-cog fa-spin me-2"></i> Generate Cards
+                        </button>
+                    </div>
+                    <div class="output w-100">
+                        <textarea class="form-control textarea" name="output2" id="output2" rows="10" readonly placeholder=""></textarea>
+                        <button class="copy-btn" onclick="copyToClipboard()"><i class="fas fa-copy me-2"></i>Copy</button>
+                    </div>
+                </form>
             </div>
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="cvvInput" class="form-label"><i class="fas fa-lock me-2"></i>Custom CVV:</label>
-                <input type="text" class="form-control" id="cvvInput" name="cvv" placeholder="Optional" maxlength="3" />
-              </div>
-              <div class="col-md-4">
-                <label for="expiryMonth" class="form-label"><i class="fas fa-calendar-alt me-2"></i>Expiry Month:</label>
-                <select class="form-select" id="expiryMonth">
-                  <option value="">Random</option>
-                  <option value="01">01</option>
-                  <option value="02">02</option>
-                  <option value="03">03</option>
-                  <option value="04">04</option>
-                  <option value="05">05</option>
-                  <option value="06">06</option>
-                  <option value="07">07</option>
-                  <option value="08">08</option>
-                  <option value="09">09</option>
-                  <option value="10">10</option>
-                  <option value="11">11</option>
-                  <option value="12">12</option>
-                </select>
-              </div>
-              <div class="col-md-4">
-                <label for="expiryYear" class="form-label"><i class="fas fa-calendar-check me-2"></i>Expiry Year:</label>
-                <select class="form-select" id="expiryYear">
-                  <option value="">Random</option>
-                  <option value="2024">2024</option>
-                  <option value="2025">2025</option>
-                  <option value="2026">2026</option>
-                  <option value="2027">2027</option>
-                  <option value="2028">2028</option>
-                  <option value="2029">2029</option>
-                  <option value="2030">2030</option>
-                </select>
-              </div>
-            </div>
-            <div class="text-center mb-3">
-              <button type="button" class="btn btn-generate btn-lg px-5" onclick="generateCards()"><i class="fas fa-cog fa-spin me-2"></i> Generate Cards</button>
-            </div>
-            <div class="output">
-              <textarea class="form-control textarea" name="output2" id="output2" rows="10" readonly placeholder=""></textarea>
-              <button class="copy-btn" onclick="copyToClipboard()"><i class="fas fa-copy me-2"></i>Copy</button>
-            </div>
-          </form>
         </div>
-      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
